Updated index.html and style.css. and updatedi mages

--- a/index.html
+++ b/index.html
@@ -5,25 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A video streaming website for passionate independant filmmakers to stream high quality and affordable films on a pay-per-view basis.">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Square Eyes - Connecting Film-Lovers | Home</title>
 </head>
 <body>
+    <!-- Showcase -->
     <header class="showcase">
         <div class="showcase-top">
-            <img src="img/SquareEyes_Logo.png" alt="Square Eyes">
-            <a href="#" class="btn btn-rounded"></a>
+            <img src="img/logo.png" alt="Square Eyes"><a href="index.html"></a>
+            <a href="#" class="btn btn-rounded">Log In</a>
         </div>
+        <!-- *Navigation -->
+        <nav class="main-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="search.html">Search</a></li>
+                <li><a href="filmpage.html">Films</a></li>
+                <li><a href="ppv.html">Pay-per-view</a></li>
+            </ul>
+        </nav>
+        <!-- Navigation Ends -->
         <div class="showcase-content">
             <h1>Enjoy Independently Produced Entertainment</h1>
-            <p>Stream thousands of fascinating high quality films,</p>
-            <p>crafted by passionate filmmakers. </p>
-            <p>Absorbing and original movies, for your enjoyment.</p>
-            <p>Watch anywhere</p>
-            <a href="#" class="btn btn-xl">
-                Get Started <i class="fas fa-chevron-right btn-icon"></i>
-            </a>
+            <p>Stream thousands of fascinating high quality films,<br>
+                crafted by passionate filmmakers. <br>
+                Absorbing and original movies, for your enjoyment.<br>
+                Watch anywhere</p>
+            <a href="createacc.html" class="btn btn-xl"> 
+                Get Started <i class="fas fa-chevron-right btn-icon"></i></a>
         </div>
     </header>
+
+
+
+    <!-- Footer -->
+    <hr>
+    <footer class="footer">
+        <div class="logo">
+            <img src="img/logo.png" alt="Square Eyes"><a href="index.html"></a>
+        </div>
+        <div class="info-links">
+            <ul>
+                <li><a href:"#">About</a></li>
+                <li><a href:"#">Contact</a></li>
+                <li><a href:"#">FAQ</a></li>
+                <li><a href:"#">Support</a></li>
+            </ul>
+                        
+        </div>
+        <div class="slogan">    
+            <h2>Connecting Film-Lovers</h2>
+        </div>
+        <div class="cart">
+            <i class="fas fa-shopping-cart fa-2x"></i>
+        </div>
+        <div class="follow">
+            <p>Follow Us</p>
+        </div>
+        <div class="social">    
+            <ul>
+                <li><i class="fab fa-instagram-square fa-2x">
+                    <a href="https://www.instagram.com/" target="_blank"></a></i></li>
+                <li><i class="fab fa-twitter-square fa-2x">
+                    <a href="https://www.twitter.com/" target="_blank"></a></i></li>
+                <li><i class="fab fa-facebook-square fa-2x">
+                    <a href="https://www.facebook.com/" target="_blank"></a></i></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
