Added background picture. Updated css file and html files

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>Square Eyes - Connecting Film-Lovers | Home</title>
 </head>
 <body>
-    <!-- Showcase -->
-    <header class="showcase">
-        <div class="showcase-top">
-            <img src="img/logo.png" alt="Square Eyes"><a href="index.html"></a>
-            <a href="#" class="btn btn-rounded">Log In</a>
+    <!-- Showcase Home -->
+    <header class="showcase-home">
+        <div class="showcase-home-top">
+                <img src="img/logo.png" alt="Square Eyes"><a href="index.html"></a>
+                <a href="#" class="btn btn-rounded">Log In</a>
         </div>
         <!-- *Navigation -->
         <nav class="main-nav">
@@ -25,7 +25,9 @@
             </ul>
         </nav>
         <!-- Navigation Ends -->
-        <div class="showcase-content">
+
+        <!-- Showcase Home Content -->
+        <div class="showcase-home-content">
             <h1>Enjoy Independently Produced Entertainment</h1>
             <p>Stream thousands of fascinating high quality films,<br>
                 crafted by passionate filmmakers. <br>
@@ -34,6 +36,8 @@
             <a href="createacc.html" class="btn btn-xl"> 
                 Get Started <i class="fas fa-chevron-right btn-icon"></i></a>
         </div>
+        <!-- Showcase Home Content Ends -->
+    <!-- Showcase Home Ends -->
     </header>
 
 
@@ -73,5 +77,6 @@
             </ul>
         </div>
     </footer>
+    <!-- Footer Ends -->
 </body>
 </html>
