Updated index, ppv and search. Added film images. Updated css file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Showcase Home -->
     <header class="showcase-home">
-        <div class="showcase-home-top">
+        <div class="showcase-top">
                 <img src="img/logo.png" alt="Square Eyes"><a href="index.html"></a>
                 <a href="#" class="btn btn-rounded">Log In</a>
         </div>
@@ -27,7 +27,7 @@
         <!-- Navigation Ends -->
 
         <!-- Showcase Home Content -->
-        <div class="showcase-home-content">
+        <div class="showcase-content">
             <h1>Enjoy Independently Produced Entertainment</h1>
             <p>Stream thousands of fascinating high quality films,<br>
                 crafted by passionate filmmakers. <br>
@@ -40,10 +40,7 @@
     <!-- Showcase Home Ends -->
     </header>
 
-
-
     <!-- Footer -->
-    <hr>
     <footer class="footer">
         <div class="logo">
             <img src="img/logo.png" alt="Square Eyes"><a href="index.html"></a>
