--- a/search.html
+++ b/search.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Showcase Search -->
     <header class="showcase-search">
-        <div class="showcase-search-top">
+        <div class="showcase-top">
                 <img src="img/logo.png" alt="Square Eyes"><a href="index.html"></a>
                 <a href="#" class="btn btn-rounded">Log In</a>
         </div>
@@ -26,8 +26,8 @@
         </nav>
         <!-- Navigation Ends -->
 
-        Showcase Search Content
-        <div class="showcase-search-content">
+        <!-- Showcase Search Content -->
+        <div class="showcase-content">
             <h1>Search Films</h1>
             <p>You can search for a title, category, producer, genre etc.</p>
 
@@ -47,7 +47,6 @@
     </header>
 
     <!-- Footer -->
-    <hr>
     <footer class="footer">
         <div class="logo">
             <img src="img/logo.png" alt="Square Eyes"><a href="index.html"></a>
