Updated ppv.html. Updated createacc.html. Updated css. Added image.

--- a/ppv.html
+++ b/ppv.html
@@ -6,7 +6,7 @@
     <meta name="description" content="A video streaming website for passionate independant filmmakers to stream high quality and affordable films on a pay-per-view basis.">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Square Eyes - Connecting Film-Lovers | Pay per view purchase page</title>
+    <title>Square Eyes - Connecting Film-Lovers | Pay Per View Purchase page</title>
 </head>
 <body>
     <!-- Showcase PPV -->
@@ -41,14 +41,15 @@
                         <li><p>Total<br>$5</p></li>
                     </ul>
                 </div>
-                <div class="subtotal">
-                    <ul>
-                        <li><p>Subtotal<br>$5</p></li>
-                    </ul>
-                </div>
+                
+            <div class="subtotal">
+                <ul>
+                    <li><p>Subtotal<br>$5</p></li>
+                </ul>
+            </div>
                 
             </div>
-            <a href="ppv.html" class="btn btn-xl"> 
+            <a href="#" class="btn btn-xl"> 
                 Purchase <i class="fas fa-chevron-right btn-icon"></i></a>
         </div>
         <!-- Showcase PPV Content Ends -->
