--- a/account.html
+++ b/account.html
@@ -1,1 +1,82 @@
-*
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A video streaming website for passionate independant filmmakers to stream high quality and affordable films on a pay-per-view basis.">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Square Eyes - Connecting Film-Lovers | Account page</title>
+</head>
+<body>
+    <!-- Showcase Account -->
+    <header class="showcase-account">
+        <div class="showcase-top">
+                <img src="img/logo.png" alt="Square Eyes"><a href="index.html"></a>
+                <a href="#" class="btn btn-login">Log In</a>
+        </div>
+        <!-- *Navigation -->
+        <nav class="main-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="search.html">Search</a></li>
+                <li><a href="filmpage.html">Films</a></li>
+                <li><a href="ppv.html">Pay-per-view</a></li>
+            </ul>
+        </nav>
+        <!-- Navigation Ends -->
+
+        <!-- Showcase Account Content -->
+        <div class="showcase-details">
+            <ul>
+                <li><h1>Account Details</h1></li>
+                <li><h2>Full Name:</h2><p>John McTiernan</p></li>
+                <li><h2>User Name:</h2><p>john.mctiernan@diehard.com</p></li>
+                <li><h2>Current Password:</h2><p>********</p></li>
+                <li><h2>Subscription Type:</h2><p>Producer</p></li>
+                <li><h2>Date Of Birth:</h2><p>1951-01-08</p></li>
+                <li><h2>Gender:</h2><p>Male</p></li>
+            </ul>
+        </div>
+        <!-- Showcase Account Content Ends -->
+    <!-- Showcase Account Ends -->
+    </header>
+
+    <!-- Footer -->
+    
+    <footer class="footer">
+        <div class="logo">
+            <img src="img/logo.png" alt="Square Eyes"><a href="index.html"></a>
+        </div>
+        <div class="info-links">
+            <ul>
+                <li><a href:"#">About</a></li>
+                <li><a href:"#">Contact</a></li>
+                <li><a href:"#">FAQ</a></li>
+                <li><a href:"#">Support</a></li>
+            </ul>
+                        
+        </div>
+        <div class="slogan">    
+            <h2>Connecting Film-Lovers</h2>
+        </div>
+        <div class="cart">
+            <i class="fas fa-shopping-cart fa-2x"></i>
+        </div>
+        <div class="follow">
+            <p>Follow Us</p>
+        </div>
+        <div class="social">    
+            <ul>
+                <li><i class="fab fa-instagram-square fa-2x">
+                    <a href="https://www.instagram.com/" target="_blank"></a></i></li>
+                <li><i class="fab fa-twitter-square fa-2x">
+                    <a href="https://www.twitter.com/" target="_blank"></a></i></li>
+                <li><i class="fab fa-facebook-square fa-2x">
+                    <a href="https://www.facebook.com/" target="_blank"></a></i></li>
+            </ul>
+        </div>
+    </footer>
+    <!-- Footer Ends -->
+</body>
+</html>
