--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="showcase-home">
         <div class="showcase-top">
                 <img src="img/logo.png" alt="Square Eyes"><a href="index.html"></a>
-                <a href="#" class="btn btn-rounded">Log In</a>
+                <a href="#" class="btn btn-login">Log In</a>
         </div>
         <!-- *Navigation -->
         <nav class="main-nav">
