Updated css file and html files.

--- a/ppv.html
+++ b/ppv.html
@@ -13,7 +13,7 @@
     <header class="showcase-ppv">
         <div class="showcase-top">
                 <img src="img/logo.png" alt="Square Eyes"><a href="index.html"></a>
-                <a href="#" class="btn btn-login">Log In</a>
+                <a href="account.html" class="btn btn-login">Log In</a>
         </div>
         <!-- *Navigation -->
         <nav class="main-nav">
@@ -75,7 +75,7 @@
             <h2>Connecting Film-Lovers</h2>
         </div>
         <div class="cart">
-            <i class="fas fa-shopping-cart fa-2x"></i>
+            <i class="fas fa-shopping-cart fa-2x"><a href="ppv.html"></a></i>
         </div>
         <div class="follow">
             <p>Follow Us</p>
