--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="showcase-home">
         <div class="showcase-top">
                 <img src="img/logo.png" alt="Square Eyes"><a href="index.html"></a>
-                <a href="#" class="btn btn-login">Log In</a>
+                <a href="account.html" class="btn btn-login">Log In</a>
         </div>
         <!-- *Navigation -->
         <nav class="main-nav">
@@ -58,19 +58,19 @@
             <h2>Connecting Film-Lovers</h2>
         </div>
         <div class="cart">
-            <i class="fas fa-shopping-cart fa-2x"></i>
+            <i class="fas fa-shopping-cart fa-2x"><a href="ppv.html"></a></i>
         </div>
         <div class="follow">
             <p>Follow Us</p>
         </div>
         <div class="social">    
             <ul>
-                <li><i class="fab fa-instagram-square fa-2x">
-                    <a href="https://www.instagram.com/" target="_blank"></a></i></li>
-                <li><i class="fab fa-twitter-square fa-2x">
-                    <a href="https://www.twitter.com/" target="_blank"></a></i></li>
-                <li><i class="fab fa-facebook-square fa-2x">
-                    <a href="https://www.facebook.com/" target="_blank"></a></i></li>
+                <li><i class="fab fa-instagram-square fa-2x"></i>
+                    <a href="https://www.instagram.com/" target="_blank"></a></li>
+                <li><i class="fab fa-twitter-square fa-2x"></i>
+                    <a href="https://www.twitter.com/" target="_blank"></a></li>
+                <li><i class="fab fa-facebook-square fa-2x"></i>
+                    <a href="https://www.facebook.com/" target="_blank"></a></li>
             </ul>
         </div>
     </footer>
